--- a/templates/admin/annonce.html.twig
+++ b/templates/admin/annonce.html.twig
@@ -21,9 +21,9 @@
                                 <div class="cart-produit-content-etat">{{ element.etat }}</div>
                             </div>
                             <div class="cart-produit-action">
-                                <div>  <a href="{{ path('admin_annonceOk', {'id': element.id}) }}" >valider</a></div>
-                                <div>    <a href="{{ path('admin_annonceRemove', {'id': element.id}) }}" >refuser</a></div>
-                                <div> <a href="{{ path('admin_exam_annonce', {'id': element.id}) }}" >examiner l'annonce</a></div>
+                                <div>  <a href="{{ path('admin_annonceOk', {'id': element.id}) }}" ><button>valider</button></a></div>
+                                <div>    <a href="{{ path('admin_annonceRemove', {'id': element.id}) }}" ><button>refuser</button></a></div>
+                                <div> <a href="{{ path('admin_exam_annonce', {'id': element.id}) }}" ><button>examiner l'annonce</button></a></div>
                             </div>
                         </div>
                     </a>
