--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,8 +7,8 @@
     <div class="ajouter-utilisateur"><a href="{{ path('admin_ajouterUtilisateur') }}"><img src="{{ asset('icon/ajout-utilisateur.png') }}"><h3>Ajouter un utilisateur</h3></a> </div>
     <div class="produit-validation"><a href="{{ path('admin_validation_annonce') }}"><img src="{{ asset('icon/validation-annonce.png') }}"><h3>Validation des annonces</h3></a> </div>
     <div class="ajouter-administrateur"><a href="{{ path('admin_ajouterAdmin') }}"><img src="{{ asset('icon/ajout-admin.png') }}"> <h3>Ajouter un administrateur</h3></a></div>
-    <div class="supprimer-utilisateur"><a href="#"><img src="{{ asset('icon/supprimer-utilisateur.png') }}"> <h3>Bloquer/Supprimer un utilisateur</h3></a></div>
-    <div class="ajouter-categorie"><a href="#"><img src="{{ asset('icon/category-add.png') }}"><h3>Ajouter une categorie</h3></a></div>
+    <div class="supprimer-utilisateur"><a href="{{ path('listSignalement') }}"><img src="{{ asset('icon/supprimer-utilisateur.png') }}"> <h3>Bloquer/Supprimer un utilisateur</h3></a></div>
+    <div class="ajouter-categorie"><a href="{{ path('categories_create') }}"><img src="{{ asset('icon/category-add.png') }}"><h3>Ajouter une categorie</h3></a></div>
 
 </div>
 
