--- a/templates/produit/produitSearch.html.twig
+++ b/templates/produit/produitSearch.html.twig
@@ -1,7 +1,7 @@
 {% extends 'main/home.html.twig' %}
 
 {% block title %}
-{{ parent() }}
+    {{ parent() }}
 {% endblock %}
 
 {% block body %}
@@ -11,10 +11,10 @@
             {{ form_row(filtreForm.min) }}
             {{ form_row(filtreForm.max) }}
             <div class="filtre-categorie">
-            {{ form_row(filtreForm.categories) }}
+                {{ form_row(filtreForm.categories) }}
             </div>
             <div class="filtre-livraison">
-            {{ form_row(filtreForm.livraison) }}
+                {{ form_row(filtreForm.livraison) }}
             </div>
             {{ form_row(filtreForm.nature) }}
             {{ form_row(filtreForm.etat) }}
@@ -24,21 +24,22 @@
         <section class="produit-list">
             {% for produit in resultats %}
                 {% if produit.statut != 'en attente de validation' %}
-                <article class="articl-produit">
-                    <a href="{{ path('produits_detail', {'id': produit.id}) }}" title="Voir les détails | quantité disponible {{ produit.images| length }}">
-                        {% if produit.image != "" %}
-                        <img src="{{ asset('imageProduit/' ~ produit.image) }}" alt="{{ produit.nom }}">
-                        {% else %}
-                        <img src="{{ asset('image-sell-me/image-par-default.jpg') }}" alt="{{produit.nom }}">
-                        {% endif %}
-                    </a>
-                    <h1 id="produit-nom">{{ produit.nom }} </h1>
-                    <p id="produit-categorie">categorie : {{ produit.categorie.nom }}</p>
-                    <div class="articl-produit-detail">
-                        <p id="produit-prix">{{ produit.prix|number_format(0, ',',' ') }} €</p>
-                        <p id="produit-etat">{{ produit.etat }}</p>
-                    </div>
-                </article>
+                    <article class="articl-produit">
+                        <a href="{{ path('produits_detail', {'id': produit.id}) }}"
+                           title="Voir les détails | quantité disponible {{ produit.images| length }}">
+                            {% if produit.image != "" %}
+                                <img src="{{ asset('imageProduit/' ~ produit.image) }}" alt="{{ produit.nom }}">
+                            {% else %}
+                                <img src="{{ asset('image-sell-me/image-par-default.jpg') }}" alt="{{ produit.nom }}">
+                            {% endif %}
+                        </a>
+                        <h1 id="produit-nom">{{ produit.nom }} </h1>
+                        <p id="produit-categorie">categorie : {{ produit.categorie.nom }}</p>
+                        <div class="articl-produit-detail">
+                            <p id="produit-prix">{{ produit.prix|number_format(0, ',',' ') }} €</p>
+                            <p id="produit-etat">{{ produit.etat }}</p>
+                        </div>
+                    </article>
                 {% endif %}
             {% endfor %}
         </section>
