--- a/templates/signalisation/list.html.twig
+++ b/templates/signalisation/list.html.twig
@@ -37,7 +37,7 @@
 
             {% else %}
 
-                Pas d'annonce a examiner dans votre panier
+                Pas d'annonce a examiner
             {% endfor %}
         </div>
 
