--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -15,13 +15,33 @@
     <h2>Détails de la commande :</h2>
     <ul>
         {% for detail in commande.commandeDetails %}
-            <li>{{ detail.produitId.nom }} - Quantité : {{ detail.quantite }} - Prix de la commande : {{ detail.prix }}</li>
+            <div><div>
+                    - Produit  :  {{ detail.produitId.nom }}
+                </div>
+                <div>
+                    - Quantité :   {{ detail.quantite }}
+                </div>
+                <div>
+                    - Prix de la commande :   {{ detail.prix }}€
+                </div>
+            </div>
         {% endfor %}
     </ul>
-    <h3> Adress de livraison connu :  {{ commande.userId.adress }} {{ commande.userId.codePostal }}
-        {{ commande.userId.ville }} {{ commande.userId.pays }}
+    <h3> Adress de livraison connu : {{ commande.userId.adress }} {{ commande.userId.codePostal }}
+            {{ commande.userId.ville }} {{ commande.userId.pays }}
     </h3>
-            <div class="button-paiement" >
-                <button><a href="{{ path('stripe',{'id' : commande.id}) }}">payer ma commande</a></button>
+    {% if commande.paiements %}
+            <div>
+                <article>
+                           la commande est validé et payée
+                </article>
+<div>
+    <button><a href="{{ path('stripe_success', {'id': commande.id}) }}">Voir les détails de la commande</a></button>
+</div>
             </div>
+    {% else %}
+        <div class="button-paiement" >
+            <button><a href="{{ path('stripe',{'id' : commande.id}) }}">payer ma commande</a></button>
+        </div>
+    {% endif %}
 {% endblock %}
