--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -111,7 +111,7 @@
                         <li><a href="">FAQ</a></li>
                         <li><a href="">Nous contacter</a></li>
                         <li><a href="">CGV et Droits</a></li>
-                        <li><a href="">Pour mieux nous connaitre</a></li>
+                        <li><a href="{{ path('nous_connaitre') }}">Pour mieux nous connaitre</a></li>
                         <div class="logo-submenu"><img src="{{ asset('img/logo sell me.png') }}" alt="logo sell-me">
                         </div>
                     </ul>
@@ -149,7 +149,7 @@
                     Nous sommes enchantés de vous accueillir dans notre espace dédié aux particuliers,
                     où vous pouvez vendre vos produits de manière simple et efficace.
                 </article>
-                <button><a href="#">Lire plus</a></button>
+                <button><a href="{{ path('nous_connaitre') }}">Lire plus</a></button>
             </div>
 
             <div class="pub1">
