--- a/templates/produit/list.html.twig
+++ b/templates/produit/list.html.twig
@@ -38,6 +38,10 @@
         {% endif %}
     {% endfor %}
 </section>
+
+    </div>
+    <div class="pages">
+    {{ knp_pagination_render(produits) }}
     </div>
 {% endblock %}
 
