--- a/templates/message/chat.html.twig
+++ b/templates/message/chat.html.twig
@@ -10,27 +10,34 @@
 
     <div class="chat-container">
         <div class="chat-title">
-            <a href="{{ path('app_message') }}"><img src="{{ asset('icon/arrow left.png') }}" id="flechGaucheChat"
-                                                     alt="précédent"></a>
+            <a href="{{ path('app_message') }}">
+                <img src="{{ asset('icon/arrow left.png') }}" id="flechGaucheChat" alt="précédent">
+            </a>
             {% if app.user == message.produit.vendeur %}
                 <h3>Vendu par vous</h3>
             {% else %}
-                <h3>Vendu par : {{ message.produit.vendeur.nom }}</h3>
+                <h3>Vendu par :
+                    <a href="{{ path('profil_vendeur', {id : message.produit.vendeur.id}) }}">
+                        {{ message.produit.vendeur.nom }}
+                    </a>
+                </h3>
             {% endif %}
 
             <img src=" {{ asset('imageProduit/' ~ message.produit.image) }}" alt="{{ message.produit.nom }}">
             <p> {{ message.produit.nom }}</p>
 
-
-            <div class="menu-item-chat"><a href="#"><img src="{{ asset('img/menu-vertical.png') }}" id="clipart"
-                                                         alt="menu lateral"></a>
+            <div class="menu-item-chat">
+                <a href="#">
+                    <img src="{{ asset('img/menu-vertical.png') }}" id="clipart" alt="menu lateral">
+                </a>
                 <ul class="sub-menu-chat">
                     <li>
-                        <a href="{{ path('signalisation_create', {'id': destinataire.id, 'idProduit': message.produit.id}) }}">Signaler
-                            l'utilisateur</a></li>
+                        <a href="{{ path('signalisation_create', {'id': destinataire.id, 'idProduit': message.produit.id}) }}">
+                            Signaler l'utilisateur
+                        </a>
+                    </li>
                 </ul>
             </div>
-
         </div>
 
         <div class="message-chat">
@@ -40,9 +47,9 @@
                         <div class="message">
                             <p>{{ mess.message }}</p>
                             {% if mess.image %}
-                                <div class="message-image"><img src="{{ asset('imageChat/' ~ mess.image) }}"
-                                                                alt="{{ message.produit.nom }}"></div>
-
+                                <div class="message-image">
+                                    <img src="{{ asset('imageChat/' ~ mess.image) }}" alt="{{ message.produit.nom }}">
+                                </div>
                             {% endif %}
                             {% if mess.fichier %}
                                 <div class="message-fichier"><a href="{{ asset('fichierChat/' ~ mess.fichier) }}"><img
@@ -52,16 +59,20 @@
                             <div class="message-details"><p>envoyé par vous a
                                     : {{ mess.dateDeCreation|date('d/m/Y H:i:s') }}</p></div>
                         </div>
-
                     </div>
                 {% else %}
                     <div class="message-container utilisateur-cible" onclick="toggleDetails(this)">
+                        {% if mess.envoyeur.photoDeProfil %}
+                            <div class="photoDeProfil_chat">
+                                <img src="{{ asset('photoDeProfil/'~ mess.envoyeur.photoDeProfil) }}" alt="photo de profil">
+                            </div>
+                        {% endif %}
                         <div class="message">
+
                             <p>{{ mess.message }}</p>
                             {% if mess.image %}
                                 <div class="message-image"><img src="{{ asset('imageChat/' ~ mess.image) }}"
                                                                 alt="{{ message.produit.nom }}"></div>
-
                             {% endif %}
                             {% if mess.fichier %}
                                 <div class="message-fichier"><a href="{{ asset('fichierChat/' ~ mess.fichier) }}"><img
@@ -71,15 +82,12 @@
                             <div class="message-details"><p>envoyé par {{ mess.destinataire.nom }} a
                                     : {{ mess.dateDeCreation|date('d/m/Y H:i:s') }}</p></div>
                         </div>
-
                     </div>
                 {% endif %}
             {% endfor %}
         </div>
         <div class="chat-form">
             {{ form_start(formchat, {'attr': {'id': 'formchat'}}) }}
-
-
             <div class="select-file">
                 <label for="message_fichier"><img src="{{ asset('icon/bouton piece joint.png') }}"
                                                   alt="piece jointe"></label>
@@ -94,30 +102,20 @@
             <div class="chat-input">
                 {{ form_row(formchat.message, {'attr': {'id': 'formchat-message'}}) }}
             </div>
-
             <div class="chat-bouton">
                 <button id="buttonForm" type="submit"><img src="{{ asset('icon/bouton envoyer.png') }}"
                                                            alt="bouton envoyer"></button>
                 {{ form_row(formchat.submit, {'attr': {'style': 'display: none;'}, 'label': false}) }}
             </div>
-
             {{ form_end(formchat) }}
-
         </div>
-
-
     </div>
-
     {% for message in app.flashes('chat-error') %}
         <div class="message-flash">
             {{ message }}
         </div>
     {% endfor %}
-
-
-
 {% endblock %}
-
 {% block footer %}
     <div class="copyright">
         <img src="{{ asset('img/logo sell me.png') }}" alt="Sell Me">
@@ -127,19 +125,23 @@
 
 {% block javascript %}
 <script>
-
+// creation d'un objet EventSource pour établir une connexion avec le serveur Mercure
     const eventSource = new EventSource("{{ mercure('https://mercure.test/chat')|escape('js') }}");
-eventSource.onmessage = event => {
+            eventSource.onmessage = event => {
+
     const messageContainer = document.querySelector('.message-chat');
     const newMessage = document.createElement('div');
     const eventData = JSON.parse(event.data);
 
+    //recupérer les informations de l'évenement
     const message = eventData.message;
     const envoyeur = eventData.envoyeur;
     const destinataire = eventData.destinataire;
     const image = eventData.image;
     const fichier = eventData.fichier;
-    const userId = {{ app.user.id }}; // Récupérez l'identifiant de l'utilisateur connecté depuis Symfony
+
+    // Récupérez l'identifiant de l'utilisateur connecté depuis Symfony
+    const userId = {{ app.user.id }};
 
     // Déterminez la classe à appliquer en fonction de l'identifiant de l'expéditeur
     let messageClass = (envoyeur === userId) ? 'utilisateur-connecte' : 'utilisateur-cible';
@@ -153,42 +155,40 @@ eventSource.onmessage = event => {
         <div class="message">
             <p>${message}</p>
              ${image ? `<div class="message-image"><img src="{{ asset('imageChat/') }}${image}" alt="Image"></div>` : ''}
-             ${fichier ? `<div class="message-fichier"><a href="{{ asset('fichierChat/') }}${fichier}" > <img src="{{ asset('icon/bouton piece joint.png') }}"> </a></div>` : ''}
+             ${fichier ? `<div class="message-fichier"><a href="{{ asset('fichierChat/') }}${fichier}" >
+             <img src="{{ asset('icon/bouton piece joint.png') }}"> </a></div>` : ''}
         </div>
     `;
-
-
     // Ajoutez le nouvel élément de message à la liste des messages
     messageContainer.appendChild(newMessage);
     scrollToBottom();
 }
 
-
 document.addEventListener("DOMContentLoaded", function() {
+    //récupération des élément du formulaire
     const form = document.getElementById("formchat");
     const messageInput = document.getElementById("message_message");
     const imageInput = document.getElementById("message_image");
 
-    console.log("Form:", form);
-    console.log("Message Input:", messageInput);
-    console.log("Image Input:", imageInput);
-
+    //ecouteur d'evenement pour la soumission du formulaire
     form.addEventListener("submit", function(event) {
-        event.preventDefault(); // Empêche le comportement par défaut du formulaire
 
-        // Effectuez ici votre logique pour envoyer les données du formulaire via AJAX
+        // Empecher le formulaire de recharger la page
+        event.preventDefault();
+
+        // récuperer les données du formulaire
         const formData = new FormData(form);
+
+        //Envoie des données du formulaire via une requête AJAX fetch
         fetch("{{ path('app_chat', {'id': destinataire.id, 'produitId': message.produit.id}) }}", {
             method: "POST",
             body: formData
         })
         .then(response => {
             if (response.ok) {
-                // Faire quelque chose après une soumission réussie du formulaire
-                // Par exemple, vider le champ de message
+                //  vider les champ aprés la soumission
                 form.reset();
             } else {
-                // Gérer les erreurs en cas d'échec de la soumission du formulaire
                 console.error("Erreur lors de la soumission du formulaire");
             }
         })
@@ -207,9 +207,11 @@ document.addEventListener("DOMContentLoaded", function() {
 
         const button = document.getElementById("buttonForm");
         if (messageInput.value.trim() === "" && imageInput.value.trim() === "") {
-            button.disabled = true; // Désactive le bouton si les champs sont vides
+            // Désactiver le bouton si les champs sont vides
+            button.disabled = true;
         } else {
-            button.disabled = false; // Active le bouton si au moins un champ est rempli
+            // Activer le bouton si au moins un champ est rempli
+            button.disabled = false;
         }
     }
 });
@@ -217,12 +219,13 @@ document.addEventListener("DOMContentLoaded", function() {
 window.onload = function() {
     scrollToBottom();
 };
-
+//faire défiler vers le bas de la fenêtre de chat
 function scrollToBottom() {
     var messageContainer = document.querySelector('.message-chat');
     messageContainer.scrollTop = messageContainer.scrollHeight;
 }
 
+//Afficher ou masquer les détails d'un message
 function toggleDetails(element) {
     var details = element.querySelector('.message-details');
     if (details.style.display === 'none') {
@@ -233,20 +236,21 @@ function toggleDetails(element) {
 }
 
 
-
 var menuItems = document.querySelectorAll('.menu-item-chat');
 
     // Parcourez chaque élément parent et ajoutez un gestionnaire d'événement de clic
     menuItems.forEach(function(item) {
         item.addEventListener('click', function() {
-            // Sélectionnez le sous-menu correspondant à l'élément parent actuel
+            // Sélectionner le sous-menu correspondant à l'élément parent actuel
             var subMenu = item.querySelector('.sub-menu-chat');
 
-            // Vérifiez si le sous-menu est visible ou caché
+            // Vérifier si le sous-menu est visible ou caché
             if (subMenu.style.display === 'block') {
-                subMenu.style.display = 'none'; // Si visible, cachez le sous-menu
+                // Si visible, cachez le sous-menu
+                subMenu.style.display = 'none';
             } else {
-                subMenu.style.display = 'block'; // Sinon, affichez le sous-menu
+                // Sinon, affichez le sous-menu
+                subMenu.style.display = 'block';
             }
         });
     });
