--- a/templates/produit/produitSearch.html.twig
+++ b/templates/produit/produitSearch.html.twig
@@ -44,6 +44,9 @@
             {% endfor %}
         </section>
     </div>
+    <div class="pages">
+        {{ knp_pagination_render(resultats) }}
+    </div>
 {% endblock %}
 
 {% block nav1 %}
